--- a/frontend/interview-pre-ai/vercel.json
+++ b/frontend/interview-pre-ai/vercel.json
@@ -1,4 +1,17 @@
+
+
 {
-  "builds": [{ "src": "index.html", "use": "@vercel/static-build" }],
-  "routes": [{ "src": "/(.*)", "dest": "/" }]
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
 }
