--- a/frontend/interview-pre-ai/vercel.json
+++ b/frontend/interview-pre-ai/vercel.json
@@ -1,14 +1,18 @@
-
-
 {
   "version": 2,
   "builds": [
     {
-      "src": "package.json",
-      "use": "@vercel/static-build"
+      "src": "frontend/interview-pre-ai/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
     }
   ],
   "routes": [
+    {
+      "handle": "filesystem"
+    },
     {
       "src": "/(.*)",
       "dest": "/index.html"
