feat: Update Dashboard layout and improve AIResponsePreview component structure

--- a/frontend/interview-pre-ai/vercel.json
+++ b/frontend/interview-pre-ai/vercel.json
@@ -1,18 +1,14 @@
+
+
 {
   "version": 2,
   "builds": [
     {
-      "src": "frontend/interview-pre-ai/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+      "src": "package.json",
+      "use": "@vercel/static-build"
     }
   ],
   "routes": [
-    {
-      "handle": "filesystem"
-    },
     {
       "src": "/(.*)",
       "dest": "/index.html"
